ch12/istio/demo-istio-service/all.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-istio-service
  labels:
    app: demo-istio-service
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: demo-istio-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-istio-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-istio-service
  template:
    metadata:
      labels:
        app: demo-istio-service
        version: v1
    spec:
      imagePullSecrets:
        - name: regsecret
      containers:
        - name: demo-istio-service
          image: registry.cn-hangzhou.aliyuncs.com/wiselyman/demo-istio-service:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 130
            timeoutSeconds: 10
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 5
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      hosts:
        - '*'

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-istio-service
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
  - match:
      - uri:
          prefix: /demo-istio
    rewrite:
      uri: /
    route:
      - destination:
          host: demo-istio-service
          port:
            number: 8080
